samples/_failures_safe/1761724233_550fc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_facea0bb.c: In function ‘main’:
./samples/SAFE/__tmp_facea0bb.c:158:17: error: expected ‘;’ at end of input
  158 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_facea0bb.c:158:5: error: expected declaration or statement at end of input
  158 |     print_matrix
      |     ^~~~~~~~~~~~
